--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "angularfire": "^2.3.0",
     "bootstrap": "^5.3.0-alpha3",
     "firebase": "^9.20.0",
+    "primeicons": "^6.0.1",
     "primeng": "^15.4.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
